# atomic

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  web.dockerfile
.github/workflows/: docker.yml  release.yml
atomic_sync/: .env.example  CLAUDE.md  Dockerfile  dev.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
atomic_sync/docker/: nginx.conf
crates/atomic-cloud/src/: db.rs  jobs.rs
crates/atomic-core/src/: agent.rs  canvas_level.rs  chunking.rs  db.rs  embedding.rs  lib.rs  manager.rs  models.rs  registry.rs  search.rs  wiki.rs
crates/atomic-mcp/: Cargo.toml
crates/atomic-mcp/src/: db.rs  main.rs  server.rs  types.rs
crates/atomic-server/src/: lib.rs  mcp_auth.rs  state.rs
crates/mcp-bridge/: Cargo.toml
extension/options/: options.js
ios/: project.yml
ios/AtomicMobile/: APIClient.swift  AtomCard.swift  AtomDetailView.swift  AtomStore.swift  AtomicApp.swift  AtomicEditorTheme.swift  ComposeView.swift  ContentView.swift  DiskCache.swift  MarkdownTextView.swift  Models.swift  NetworkMonitor.swift  OfflineQueue.swift  TagBrowserView.swift
ios/ShareExtension/: Info.plist
scripts/: build-mcp-bridge.js
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  obsidian.rs  wiki.rs
src/hooks/: index.ts  useClickOutside.ts  useEmbeddingEvents.ts  useKeyboard.ts
src/lib/: api.ts  date.ts  import.ts  index.ts  markdown.ts  tauri.ts
src/stores/: atoms.ts  index.ts  tags.ts  ui.ts
(+52 files in other folders)
